Fix graph node layout w/ mathjax in threeSATtoClique. Minor updates to documentation and glossary.

--- a/AV/Development/threeSATtoCliqueCON.css
+++ b/AV/Development/threeSATtoCliqueCON.css
@@ -11,9 +11,11 @@
   height: 50px;
 }
 
-.jsavarray .jsavindex{
+.jsavgraphnode {
 	min-width:30px;
 	min-height:30px;
+	max-width:30px;
+	max-height:30px;
 	height:30px;
 	line-height:30px;
         text-align:center;
