Integrated the two syntax exercises (SyntaxTF and SyntaxMC) into the PL/LC chapter

--- a/AV/PL/interpreters/lambdacalc/slideshows/AV/parseTree.css
+++ b/AV/PL/interpreters/lambdacalc/slideshows/AV/parseTree.css
@@ -5,12 +5,12 @@
     .avcontainer {
        width: 1000;
        margin: auto;
-       height: 800;
+       height: 900;
        text-align: center;
        padding: 0;
     }
 
-    .jsavoutput {
+    p.jsavoutput.jsavline {
        height: 0;  
     }
 
@@ -18,18 +18,23 @@
          box-shadow: none;
     }
 
-    h4, div.jsavlabel {
-       margin-bottom: 5px;
-       margin-top: 0;
+    div.jsavlabel {
+	margin-bottom: 0;
+	margin-top: 0;
     }
 
+
+    .labelstyle {
+	font-weight: bold;
+	text-align: center;
+        
+    }
     .jsavnode {
        width: 6px;
        max-width: 6px;
    }
 
     div.avcontainer div.jsavcanvas {
-        min-width: 1000 !important;         
     }
 
     .jsavhighlight {
@@ -37,20 +42,19 @@
     }
     div.avcontainer  div.jsavcanvas ol.jsavarray   {
        background-color: #ddd;
-       max-width: 170;
+       max-width: 170px;
        margin: auto;
        margin-bottom: 10;
        max-height: 30;
        min-height: 30;
     }
 
-    div.moveLeft {
-         left: -30 !important;
-    }
-
+    .wide {
+      padding-right: 9px;
+   }
 
     .wider {
-      padding-right: 5px;
+      padding-right: 20px;
    }
     div.avcontainer  div.jsavcanvas ol.jsavarray  li.jsavindex  {
        max-height: 30;
@@ -70,17 +74,28 @@
         background-color: #ddd;
     }
 
-    ol.jsavarray .lambdaWidth {
+    .lambdaWidth .jsavvaluelabel {
         width : 25px;
         min-width : 25px;
     }
 
-    ol.jsavarray .oneCharWidth {
+    .oneCharWidth .jsavvaluelabel {
         width : 13px;
         min-width : 13px;
     }
 
-    ol.jsavarray .parenWidth {
+    .oneCharWidth .jsavvalue {
+        width : 13px;
+        min-width : 13px;
+    }
+
+    .parenWidth .jsavvalue {
+        width : 7px;
+        min-width : 7px;
+    }
+
+
+    .parenWidth .jsavvaluelabel {
         width : 7px;
         min-width : 7px;
     }
