--- a/AV/Development/GIntroRepCON.css
+++ b/AV/Development/GIntroRepCON.css
@@ -18,3 +18,15 @@
 	max-height: 50px !important;
 	height: 45px;
 }
+
+.addSpace{
+    letter-spacing: 8.5px;
+}
+
+.vertical-text {
+	transform: rotate(90deg);
+	transform-origin: left bottom;
+}
+
+
+
