--- a/AV/PL/AV/parseTree.css
+++ b/AV/PL/AV/parseTree.css
@@ -105,12 +105,12 @@
         min-width : 0;
     }
 
-    .highlight { 
+    .lambdaexphighlight { 
         color : red;
         font-weight: bold;
     }
 
-    .unhighlight { 
+    .lambdaexpunhighlight { 
         color : black;
         font-weight: normal;
     }
