--- a/AV/Development/GIntroRepCON.css
+++ b/AV/Development/GIntroRepCON.css
@@ -4,11 +4,6 @@
     
 }
 
-.matrixBorder{
-	border-style: solid;
-	border-width: 5px;
-	
-}
 
 .jsavverticalarray .jsavnode {
 	line-height: 30px !important;
@@ -24,9 +19,12 @@
 }
 
 .vertical-text {
-	transform: rotate(90deg);
-	transform-origin: left bottom;
+	transform: rotate(270deg);
+	/*transform-origin: left bottom;*/
+	transform-origin: left top;
 }
+
+
 
 
 
