--- a/Exercises/PL/exercises.css
+++ b/Exercises/PL/exercises.css
@@ -7,3 +7,13 @@
     border-radius: 0;
 }
 
+
+#problem-and-answer .jsavnode {
+    border-radius: 0;
+}
+
+#problem-and-answer .noBoxShadow {
+    font-style: italic;
+    border:none;
+    box-shadow: none;
+}
