--- a/AV/Development/GIntroDefCON.css
+++ b/AV/Development/GIntroDefCON.css
@@ -1,11 +1,7 @@
-#GraphIntro4CON .jsavcanvas {
-    
-    height: 400px;
-    
+#GIintroDefCON {
+  height: 400px;
 }
 
 .redEdge{  /* make graph edge red */ 
-
-	stroke: red;
-
+  stroke: red;
 }
