--- a/AV/Development/GIntroDef2_2CON.css
+++ b/AV/Development/GIntroDef2_2CON.css
@@ -1,5 +1,12 @@
 #GIntroDef2_2CON .jsavcanvas {
     
-    height: 300px;
+    height: 500px;
     
+}
+
+.borderEdge{  /* make graph edge red */ 
+
+	stroke: #CCCCCC;
+	stroke-width: 1;
+
 }
