--- a/AV/Development/DijkstraPE.css
+++ b/AV/Development/DijkstraPE.css
@@ -10,27 +10,27 @@
 #procontrols {
   text-align: center;
 }
-.jsavverticalarray .jsavindex:first-of-type, .jsavverticalarray .jsavindex:first-of-type .jsavvalue {
-  -ms-border-top-left-radius: 0px;
-  -moz-border-top-left-radius: 0px;
-  -o-border-top-left-radius: 0px;
-  -webkit-border-top-left-radius: 0px;
-  border-top-left-radius: 0px;
-  -ms-border-top-right-radius: 0px;
-  -moz-border-top-right-radius: 0px;
-  -o-border-top-right-radius: 0px;
-  -webkit-border-top-right-radius: 0px;
-  border-top-right-radius: 0px;
+
+.jsavgraph svg {
+  z-index: 0;
 }
-.jsavverticalarray .jsavindex:last-of-type, .jsavverticalarray .jsavindex:last-of-type .jsavvalue {
-  -ms-border-bottom-left-radius: 0px;
-  -moz-border-bottom-left-radius: 0px;
-  -o-border-bottom-left-radius: 0px;
-  -webkit-border-bottom-left-radius: 0px;
-  border-bottom-left-radius: 0px;
-  -ms-border-bottom-right-radius: 0px;
-  -moz-border-bottom-right-radius: 0px;
-  -o-border-bottom-right-radius: 0px;
-  -webkit-border-bottom-right-radius: 0px;
-  border-bottom-right-radius: 0px;
+
+.jsavnode.marked {
+  background-color: #FFF050;
+}
+.jsavgraph .jsavedge {
+  stroke-width: 8;
+  stroke: #7D8879;
+}
+.jsavgraph .jsavedge.marked {
+  stroke: #F6B611;
+}
+.jsavgraph .jsavedgelabel {
+  font-size: 16px;
+  background-color: transparent;
+  text-shadow: 0 0 5px #fff;
+}
+.jsavautoresize .jsavnode {
+  min-width: 45px; 
+  min-height: 45px; 
 }
