Changes from slide show to visual components. Made some smaller, a few formatting erorrs and cannot figure out how to make nodes smaller

--- a/AV/Development/GIntroDef2_2CON.css
+++ b/AV/Development/GIntroDef2_2CON.css
@@ -7,6 +7,17 @@
 .borderEdge{  /* make graph edge red */ 
 
 	stroke: #CCCCCC;
-	stroke-width: 1;
+	stroke-width: .5;
 
+}
+
+.smallNode{
+	height: 2;
+	width: 2;
+}
+
+.node{
+  border-radius: 4 !important;
+ 	width: 10px !important;
+ 	height: 10px !important;
 }
