Cleaning up graph def slideshows

--- a/AV/Graph/GraphDefCON.css
+++ b/AV/Graph/GraphDefCON.css
@@ -1,8 +1,12 @@
-#GdefundefCON .jsavcanvas {
+#GdirundirCON .jsavcanvas {
   height: 170px;
 }
 
 #GneighborCON .jsavcanvas {
+    height: 180px;
+}
+
+#GpathDefCON .jsavcanvas {
     height: 180px;
 }
 
