Updating more graph definitions

--- a/AV/Graph/GraphDefCON.css
+++ b/AV/Graph/GraphDefCON.css
@@ -7,11 +7,15 @@
 }
 
 #GpathDefCON .jsavcanvas {
-    height: 180px;
+    height: 185px;
 }
 
 #GconcomCON .jsavcanvas {
     height: 160px;
+}
+
+#GsparseDefCON .jsavcanvas {
+    height: 450px;
 }
 
 .jsavautoresize .jsavnode {
