--- a/AV/Background/twoColorCON.css
+++ b/AV/Background/twoColorCON.css
@@ -1,4 +1,8 @@
-.jsavcanvas {
- height: 250px;
- width: 400px;
+#twoColorCON{
+  height: 400;
+  width: 500;
+}
+#twoColorCON .jsavcanvas {
+ height: 250px !important; 
+ width: 400px !important;
 }
