Increasing the height of jsavline

--- a/AV/Development/AlgAnal/LinearRecurrencesCON.css
+++ b/AV/Development/AlgAnal/LinearRecurrencesCON.css
@@ -2,9 +2,9 @@
   width: 800px;
   height: 650px;
 }
-.jsavline {
+#LinearRecurrencesCON .jsavline {
   width:800px;
-  height:50px;
+  height:75px;
 }
 
 #LinearRecurrencesCON .jsavtree .jsavnode {
