--- a/AV/Development/AlgAnal/DivideAndConquerRecurrencesCON.css
+++ b/AV/Development/AlgAnal/DivideAndConquerRecurrencesCON.css
@@ -2,9 +2,9 @@
   width: 800px;
   height: 600px;
 }
-.jsavline {
+#DivideAndConquerRecurrencesCON .jsavline {
   width:800px;
-  height:50px;
+  height:100px;
 }
 .rotated {
   -webkit-transform: rotate(90deg);
